--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <a class="brand" href="#top" aria-label="Telly Tech">
         <div class="brand-mark" aria-hidden="true">
           <!-- Replace this image file when you add the real TT logo -->
-          <img class="brand-logo" src="assets/img/telly-tech-tt-logo.png" alt="Telly Tech" onerror="this.style.display='none'; this.parentElement.classList.add('brand-mark--fallback');" />
+          <img class="brand-logo" width="44" height="44" style="width:44px;height:44px;object-fit:contain;display:block;" src="assets/img/telly-tech-tt-logo.png" alt="Telly Tech" onerror="this.style.display='none'; this.parentElement.classList.add('brand-mark--fallback');" />
           <span class="brand-fallback" aria-hidden="true">TT</span>
         </div>
         <div class="brand-text">
@@ -137,6 +137,13 @@
               Texting first is totally fine.
             </p>
           </div>
+
+          
+          <figure class="hero-badge reveal" aria-label="Telly Tech local badge">
+            <img src="assets/img/telly-tech-fleur-badge.png" alt="Telly Tech Services — New Orleans badge" loading="lazy"
+                 onerror="this.onerror=null; this.src='assets/img/badge-fleur-mock.png';" />
+            <figcaption class="micro muted">Local & independent • New Orleans area</figcaption>
+          </figure>
 
           <figure class="mini-flyer reveal" aria-label="Why Telly Tech flyer">
             <img src="assets/img/flyer-hook.png" alt="Why Telly Tech flyer: $75 flat rate, we come to you, same-day service, local & independent." loading="lazy">
