Refactor index.html by removing comments and updating images
Removed unnecessary comments and updated image tags for the brand logo and fleur badge.

--- a/index.html
+++ b/index.html
@@ -6,20 +6,19 @@
   <title>Telly Tech | Same-Day In-Home Tech Support | New Orleans</title>
   <meta name="description" content="Same-day in-home tech support in New Orleans, Metairie & Kenner. $75 flat-rate house call for most jobs. Insured & background-checked. Call or text (504) 345-8049." />
 
-  <!-- Open Graph -->
   <meta property="og:title" content="Telly Tech — Same-Day In-Home Tech Support" />
   <meta property="og:description" content="$75 flat-rate house call (most jobs). Insured & background-checked. New Orleans • Metairie • Kenner. Call/Text (504) 345-8049." />
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="en_US" />
 
-  <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
 
-  <link rel="preload" href="assets/css/styles.css" as="style" />
+  <link rel="icon" href="assets/img/telly-tech-fleur-badge.png" type="image/png" />
+
   <link rel="stylesheet" href="assets/css/styles.css" />
+  
   <script defer src="assets/js/main.js"></script>
 
-  <!-- LocalBusiness Schema -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -47,12 +46,11 @@
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
 
-  <header class="site-header" data-elevate>
+  <header class="site-header">
     <div class="container header-inner">
       <a class="brand" href="#top" aria-label="Telly Tech">
         <div class="brand-mark" aria-hidden="true">
-          <!-- Replace this image file when you add the real TT logo -->
-          <img class="brand-logo" width="44" height="44" style="width:44px;height:44px;object-fit:contain;display:block;" src="assets/img/telly-tech-tt-logo.png" alt="Telly Tech" onerror="this.style.display='none'; this.parentElement.classList.add('brand-mark--fallback');" />
+          <img class="brand-logo" src="assets/img/telly-tech-tt-logo.png" alt="Telly Tech" onerror="this.style.display='none'; this.parentElement.classList.add('brand-mark--fallback');" />
           <span class="brand-fallback" aria-hidden="true">TT</span>
         </div>
         <div class="brand-text">
@@ -70,10 +68,9 @@
     </div>
   </header>
 
-  <!-- Sticky mobile CTA -->
   <div class="sticky-cta" role="region" aria-label="Quick contact">
     <a class="sticky-btn" href="tel:+15043458049">Call</a>
-    <a class="sticky-btn sticky-btn-gold" href="sms:+15043458049?&body=Hi%20Telly%20Tech%20%E2%80%94%20I%27m%20in%20____%20(neighborhood)%20and%20need%20help%20with%20____.%20Best%20time%20today%20is%20____.">Text us</a>
+    <a class="sticky-btn sticky-btn-gold" href="sms:+15043458049?body=Hi%20Telly%20Tech%20%E2%80%94%20I%27m%20in%20____%20(neighborhood)%20and%20need%20help%20with%20____.%20Best%20time%20today%20is%20____.">Text us</a>
   </div>
 
   <main id="main">
@@ -91,7 +88,7 @@
 
           <div class="hero-cta">
             <a class="btn btn-primary" href="tel:+15043458049">Call (504) 345-8049</a>
-            <a class="btn btn-secondary" href="sms:+15043458049?&body=Hi%20Telly%20Tech%20%E2%80%94%20I%27m%20in%20____%20(neighborhood)%20and%20need%20help%20with%20____.%20Best%20time%20today%20is%20____.">Text us</a>
+            <a class="btn btn-secondary" href="sms:+15043458049?body=Hi%20Telly%20Tech%20%E2%80%94%20I%27m%20in%20____%20(neighborhood)%20and%20need%20help%20with%20____.%20Best%20time%20today%20is%20____.">Text us</a>
           </div>
 
           <div class="trust-row" aria-label="Trust highlights">
@@ -177,7 +174,6 @@
         <div class="badge-row reveal" aria-label="Local badge">
           <div class="badge-card">
             <div class="badge-slot" aria-hidden="true">
-              <!-- Replace with your real fleur badge image (kept as a dedicated slot to reinforce local identity) -->
               <img class="badge-img" src="assets/img/telly-tech-fleur-badge.png" alt="" onerror="this.style.display='none';" loading="lazy" />
               <img class="badge-img" src="assets/img/badge-fleur-mock.png" alt="" loading="lazy" />
             </div>
@@ -242,7 +238,7 @@
           </div>
           <div class="callout-actions">
             <a class="btn btn-primary" href="tel:+15043458049">Call</a>
-            <a class="btn btn-secondary" href="sms:+15043458049?&body=Hi%20Telly%20Tech%20%E2%80%94%20I%27m%20in%20____%20(neighborhood)%20and%20need%20help%20with%20____.%20Best%20time%20today%20is%20____.">Text us</a>
+            <a class="btn btn-secondary" href="sms:+15043458049?body=Hi%20Telly%20Tech%20%E2%80%94%20I%27m%20in%20____%20(neighborhood)%20and%20need%20help%20with%20____.%20Best%20time%20today%20is%20____.">Text us</a>
           </div>
         </div>
       </div>
@@ -304,14 +300,13 @@
       </div>
     </section>
 
-    <!-- Tight mid-page CTA (no template here) -->
     <section class="section cta-slim">
       <div class="container cta-slim-inner reveal">
         <h2>Get help today</h2>
         <p>Call or text — we respond fast and keep it simple.</p>
         <div class="cta-slim-actions">
           <a class="btn btn-primary" href="tel:+15043458049">Call (504) 345-8049</a>
-          <a class="btn btn-secondary" href="sms:+15043458049?&body=Hi%20Telly%20Tech%20%E2%80%94%20I%27m%20in%20____%20(neighborhood)%20and%20need%20help%20with%20____.%20Best%20time%20today%20is%20____.">Text us</a>
+          <a class="btn btn-secondary" href="sms:+15043458049?body=Hi%20Telly%20Tech%20%E2%80%94%20I%27m%20in%20____%20(neighborhood)%20and%20need%20help%20with%20____.%20Best%20time%20today%20is%20____.">Text us</a>
         </div>
       </div>
     </section>
@@ -373,7 +368,7 @@
 
             <div class="btn-row">
               <a class="btn btn-primary btn-full" href="tel:+15043458049">Call now</a>
-              <a class="btn btn-secondary btn-full" href="sms:+15043458049?&body=Hi%20Telly%20Tech%20%E2%80%94%20I%27m%20in%20____%20(neighborhood)%20and%20need%20help%20with%20____.%20Best%20time%20today%20is%20____.">Text us</a>
+              <a class="btn btn-secondary btn-full" href="sms:+15043458049?body=Hi%20Telly%20Tech%20%E2%80%94%20I%27m%20in%20____%20(neighborhood)%20and%20need%20help%20with%20____.%20Best%20time%20today%20is%20____.">Text us</a>
             </div>
 
             <p class="micro muted">
@@ -472,7 +467,7 @@
 
           <div class="contact-actions">
             <a class="btn btn-primary" href="tel:+15043458049">Call (504) 345-8049</a>
-            <a class="btn btn-secondary" href="sms:+15043458049?&body=Hi%20Telly%20Tech%20%E2%80%94%20I%27m%20in%20____%20(neighborhood)%20and%20need%20help%20with%20____.%20Best%20time%20today%20is%20____.">Text us</a>
+            <a class="btn btn-secondary" href="sms:+15043458049?body=Hi%20Telly%20Tech%20%E2%80%94%20I%27m%20in%20____%20(neighborhood)%20and%20need%20help%20with%20____.%20Best%20time%20today%20is%20____.">Text us</a>
           </div>
 
           <div class="contact-trust reveal">
@@ -497,7 +492,6 @@
 
           <div class="card card--badge">
             <div class="badge-slot badge-slot--footer" aria-hidden="true">
-              <!-- Dedicated slot for the fleur badge used as your profile image everywhere -->
               <img class="badge-img" src="assets/img/telly-tech-fleur-badge.png" alt="" onerror="this.style.display='none';" loading="lazy" />
               <img class="badge-img" src="assets/img/badge-fleur-mock.png" alt="" loading="lazy" />
             </div>
