--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <header class="site-header">
     <div class="container header-inner">
       <div class="brand" aria-label="Telly Tech Services">
-        <div class="brand-mark" aria-hidden="true">TT</div>
+        <img src="assets/img/logo.jpg" alt="Telly Tech Logo" class="brand-logo" width="60" height="60">
         <div class="brand-text">
           <div class="brand-name">Telly Tech</div>
           <div class="brand-tag">Same-day, in-home tech help • New Orleans</div>
